Fix the onclick not work on mobile bug

--- a/main.css
+++ b/main.css
@@ -13,6 +13,12 @@ body {
     min-height: 40vh;
 }
 
+#touchField {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+}
 
 #rarity {
     position: absolute;
